# kasia-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
docs/: ANDROID_GIFT_CLAIM_VERIFIER_2026-05-17.md  ENCRYPTED_PUSH_PREVIEW_TRANSPORT_2026-05-21.md  FAST_RECEIPTS_AND_LOOP_CONTROL_2026-05-22.md  MEDIA_PUSH_TXID_RESOLUTION_2026-05-20.md  PRESENCE_PUSH_ENDPOINT_2026-05-13.md  PUSH_APNS_PRESENCE_DEFAULT_FIX_2026-05-21.md  PUSH_APNS_PRESENCE_GUARD_2026-05-21.md  PUSH_APNS_PRESENCE_REENABLE_2026-05-21.md  PUSH_CONTEXTUAL_ALIAS_SAFE_SCOPE_2026-05-19.md  PUSH_CONTEXTUAL_FRESHEST_ALIAS_SCOPE_2026-05-19.md  PUSH_CONTEXTUAL_RECEIVER_SCOPE_2026-05-19.md  PUSH_CONTEXTUAL_SERVER_SCOPED_ROUTES_2026-05-19.md  PUSH_DEVICE_TOKEN_REBIND_2026-05-15.md  PUSH_DISPATCH_INLINE_METRICS_2026-05-22.md  PUSH_DUPLICATE_ALIAS_GUARD_2026-05-18.md  PUSH_PREVIEW_PRIVACY_2026-05-21.md  PUSH_REALTIME_LOG_PRESSURE_2026-05-22.md  PUSH_REFLECTED_ROUTE_ALIAS_GUARD_2026-05-21.md  PUSH_REPLACE_WALLET_DEVICES_2026-05-18.md  PUSH_ROUTE_SCOPED_RECEIVER_FIX_2026-05-20.md  PUSH_SINGLE_WALLET_CONTEXTUAL_SCOPE_FIX_2026-05-20.md  PUSH_STRICT_CONTEXTUAL_ROUTES_2026-05-20.md  android-fcm-push.md
indexer/: Cargo.toml
indexer-actors/src/: block_processor.rs  data_source.rs  metrics.rs  periodic_processor.rs  virtual_chain_processor.rs
indexer-actors/src/block_processor/: message.rs
indexer-db/src/: lib.rs  messages.rs
indexer-db/src/messages/: board.rs  self_stash.rs
indexer/src/: api.rs  config.rs  gift.rs  main.rs  push.rs
indexer/src/api/: board.rs  v1.rs
indexer/src/api/v1/: contextual_messages.rs  gift.rs  push.rs  self_stash.rs
protocol/src/: operation.rs
protocol/src/operation/: deserializer.rs
scripts/: check-env.sh  devicecheck_query_bit0.sh
