[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum.workspace = true
dotenv = { workspace = true }
envy = { workspace = true }
faster-hex = { workspace = true }
fjall = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
kaspa-addresses = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-wrpc-client = { workspace = true }
rayon.workspace = true
rolling-file = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["signal"] }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
tracing-appender.workspace = true
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "local-time",
] }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
workflow-core = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = "0.22.1"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
x509-parser = "0.16.0"

indexer-db = { path = "../indexer-db" }
indexer-actors = { path = "../indexer-actors", features = ["serde", "utoipa"] }
